fix hero advanced block floating image position on mobile, fix theme switching logic to be based on viewport position rather than scroll direction

--- a/wp-content/themes/simple-block/parts/blocks/hero-advanced-block/hero-advanced-block.scss
+++ b/wp-content/themes/simple-block/parts/blocks/hero-advanced-block/hero-advanced-block.scss
@@ -112,7 +112,6 @@ body:has(.hero-advanced-block.has-video) {
 				width: 7rem;
 				height: auto;
 				top: 40%;
-				right: -5%;
 			}
 		}
 	}
